# UESTC-doc-writing

./: .gitignore  LICENSE  README.md  SKILL.md  install.sh  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
docs/: 中期报告模板.docx  总结报告模板.docx
examples/: demo_report.py
src/uestc_doc/: __init__.py  components.py  styles.py
src/uestc_doc/extractors/: __init__.py  common.py  cpp_scanner.py  python_scanner.py
src/uestc_doc/renderers/: __init__.py  mermaid_ink.py  mmdc_cli.py  pure_python.py
src/uestc_doc/templates/: __init__.py
src/uestc_doc/templates/uestc_thesis/: __init__.py  builder.py  sections.py
